[workspace]
members = [
	"auction",
	"authority",
	"bencher",
	"benchmarking",
	"currencies",
	"gradually-update",
	"oracle",
	"oracle/rpc",
	"oracle/rpc/runtime-api",
	"tokens",
	"traits",
	"utilities",
	"vesting",
	"rewards",
	"nft",
	"xcm",
	"xtokens",
	"xcm-support",
	"unknown-tokens",
	"build-script-utils",
	"weight-gen",
	"weight-meter",
]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[patch.'https://github.com/axiatech/axlib']
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-support = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-authority-discovery = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-authorship = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-babe = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-elections-phragmen = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-scheduler = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-session = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-staking = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-treasury = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-vesting = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-db = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor-common = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor-wasmi = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-application-crypto = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-arithmetic = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-authority-discovery = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-authorship = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-debug-derive = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-externalities = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-npos-elections = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-panic-handler = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime-interface = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-staking = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-storage = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-tasks = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-trie = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-version = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-wasm-interface = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[patch.'https://github.com/axiatech/cumulus']
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
allychain-info = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-pallet-dmp-queue = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-pallet-xcm = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }

[patch.'https://github.com/axiatech/axia']
xcm = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
xcm-executor = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
xcm-builder = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
pallet-xcm = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-core-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-runtime-allychains = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
xcm-simulator = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
